<resources>
    <string name="app_name">HowDroid</string>
    <string name="application_terminate">\'뒤로\' 버튼 한 번 더 누르면 종료됩니다.</string>
    <string name="binding_error">에러가 발생했습니다</string>

    <!--  login  -->
    <string name="login_title_how">HOW?</string>
    <string name="login_title_todo">TODO</string>
    <string name="login_id_hint">이메일 입력</string>
    <string name="login_pw_hint">비밀번호 입력</string>
    <string name="login_btn_login">로그인</string>
    <string name="login_signup">회원가입</string>
    <string name="login_fail_message">로그인 실패</string>
    <string name="login_success">로그인 성공</string>

    <!--  signup  -->
    <string name="signup_title">프로필을\n설정해 주세요</string>
    <string name="signup_email_title">이메일</string>
    <string name="signup_email_hint">이메일을 입력해주세요</string>
    <string name="signup_email_valid_message">중복확인 완료!</string>
    <string name="signup_email_invalid_message">올바른 이메일을 입력해주세요</string>
    <string name="signup_email_double_check">중복확인</string>
    <string name="signup_nickname_title">닉네임</string>
    <string name="signup_nickname_hint">2~6자 이하로 입력해 주세요</string>
    <string name="signup_password_title">비밀번호</string>
    <string name="signup_password_hint">8~15자 이내의 영문 숫자를 포함해주세요</string>
    <string name="signup_password_check_title">비밀번호 확인</string>
    <string name="signup_password_check_hint">비밀번호를 확인해주세요</string>
    <string name="signup_password_check_message">비밀번호가 일치하지 않습니다</string>
    <string name="signup_btn">가입완료</string>
    <string name="signup_email_duplication_fail">이미 존재하는 아이디 입니다</string>
    <string name="signup_fail">회원가입 실패</string>
    <string name="signup_success">회원가입 성공</string>

    <!--  calendar  -->
    <string name="calendar_week_description_mon">월</string>
    <string name="calendar_week_description_tue">화</string>
    <string name="calendar_week_description_wed">수</string>
    <string name="calendar_week_description_thu">목</string>
    <string name="calendar_week_description_fri">금</string>
    <string name="calendar_week_description_sat">토</string>
    <string name="calendar_week_description_sun">일</string>

    <!--  home  -->
    <string name="home_categoty_add">대분류 추가</string>
    <string name="home_add_category_hint">입력하기</string>
    <string name="home_add_category">+</string>
    <string name="home_title">오늘 할 일 %d% 달성</string>
    <string name="home_todo_detail_todo_fix">📌 TO DO 고정하기</string>
    <string name="home_todo_detail_failtag">🏷️ 실패 태그 달기</string>
    <string name="home_todo_fix_fail_message">이미 고정된 TODO 입니다.</string>
    <string name="home_todo_fix_imogi">📌</string>

    <!--  addToDO  -->
    <string name="add_todo_toolbar_title">TODO 생성</string>
    <string name="add_todo_title">나의 TODO를 생성해 볼까요?</string>
    <string name="add_todo_hint">15자 이하로 입력해 주세요</string>
    <string name="add_todo_priority_title">우선 순위를 정해볼까요?</string>
    <string name="add_todo_done">완료</string>
    <string name="add_todo_most_important">매우중요</string>
    <string name="add_todo_important">중요</string>
    <string name="add_todo_not_important">중요하지 않음</string>

    <!--  chart  -->
    <string name="chart_statistic_title">통계</string>
    <string name="chart_feedback_title">피드백</string>
    <string name="chart_statistic_achievement_rate_des"><![CDATA[지난주에 비해 <font color="#5FCA7B">%s</font> 더 달성 했어요!]]></string>
    <string name="chart_statistic_category_des"><![CDATA[이번주에는 <font color="#5FCA7B">%s</font>를 가장 많이 했어요!]]></string>
    <string name="chart_statistic_fail_tag_des"><![CDATA[이번주 TODO 실패의 가장 큰 요인은 <font color="#FF2868">%s</font>이에요]]></string>
    <string name="chart_title">%d월 %d주차 통계/피드백</string>

    <!--  failTag  -->
    <string name="my_fail_tag_title">나만의 실패 태그 만들기</string>
    <string name="my_fail_tag_sleep">잠</string>
    <string name="my_fail_tag_sick">몸상태악화</string>
    <string name="my_fail_tag_sudden_schedule">갑작스런일정</string>
    <string name="my_fail_tag_weak_will">의지박약</string>
    <string name="my_fail_tag_on_time">정각병</string>
    <string name="my_fail_tag_sns">SNS</string>
    <string name="my_fail_tag_game">게임</string>
    <string name="my_fail_tag_time_management_failure">시간관리실패</string>
    <string name="my_fail_tag_unreasonable_plan">무리한계획</string>
    <string name="my_fail_tag_low_motivation">낮은동기부여</string>
    <string name="my_fail_tag_change_schedule">일정변경</string>
    <string name="my_fail_tag_rest">휴식</string>
    <string name="my_fail_tag_slump">슬럼프</string>
    <string name="my_fail_tag_lack_concentration">집중력부족</string>
    <string name="my_fail_tag_phone_addiction">핸드폰중독</string>
    <string name="my_fail_tag_lazy">하기싫어</string>
    <string name="my_fail_tag_bad_condition">컨디션난조</string>
    <string name="my_fail_tag_sub_title">나만의 실패 태그를 5개까지 만들 수 있어요!</string>
    <string name="my_fail_tag_item"># %s</string>
    <string name="string_complete">완료</string>

    <!--  put fail tag  -->
    <string name="put_fail_tag_title">실패 태그 달기</string>
    <string name="put_fail_tag_delayed_tomorrow">내일로 미루기</string>
    <string name="put_fail_tag_delay_tomorrow_error">실패태그를 선택한 경우에만 미루기가 가능해요.</string>
    <string name="login_auto">로그인 상태 유지</string>
    <string name="signup_email_duplication">이미 존재하는 이메일 입니다</string>

</resources>