<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/Gray_50">

    <TextView
        style="@style/Body_M2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:includeFontPadding="false"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/calendar_week_description_mon"
        android:textAlignment="center"
        android:textColor="@color/Gray_600" />

    <TextView
        style="@style/Body_M2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:includeFontPadding="false"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/calendar_week_description_tue"
        android:textAlignment="center"
        android:textColor="@color/Gray_600" />

    <TextView
        style="@style/Body_M2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:includeFontPadding="false"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/calendar_week_description_wed"
        android:textAlignment="center"
        android:textColor="@color/Gray_600" />

    <TextView
        style="@style/Body_M2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:includeFontPadding="false"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/calendar_week_description_thu"
        android:textAlignment="center"
        android:textColor="@color/Gray_600" />

    <TextView
        style="@style/Body_M2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:includeFontPadding="false"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/calendar_week_description_fri"
        android:textAlignment="center"
        android:textColor="@color/Gray_600" />

    <TextView
        style="@style/Body_M2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:includeFontPadding="false"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/calendar_week_description_sat"
        android:textAlignment="center"
        android:textColor="@color/Gray_600" />

    <TextView
        style="@style/Body_M2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:includeFontPadding="false"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/calendar_week_description_sun"
        android:textAlignment="center"
        android:textColor="@color/Gray_600" />

</LinearLayout>