<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_signup_title"
            style="@style/Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="47dp"
            android:text="@string/signup_title"
            android:textColor="@color/Gray_600"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="fill_vertical"
            android:layout_marginTop="39dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toTopOf="@+id/btn_signup"
            app:layout_constraintTop_toBottomOf="@+id/tv_signup_title">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_signup_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="Orientation">

                    <TextView
                        android:id="@+id/tv_signup_email"
                        style="@style/Body_M1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="35dp"
                        android:text="@string/signup_email_title"
                        android:textColor="@color/Gray_600"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/et_signup_email"
                        style="@style/Body_M1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="25dp"
                        android:layout_marginTop="9dp"
                        android:background="@drawable/bg_edittext_input"
                        android:hint="@string/signup_email_hint"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingVertical="14dp"
                        android:paddingStart="19dp"
                        android:textColor="@color/Gray_400"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_signup_email" />

                    <TextView
                        android:id="@+id/tv_signup_email_double_check"
                        style="@style/Caption1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/bg_btn"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="5dp"
                        android:text="@string/signup_email_double_check"
                        android:textColor="@color/Gray_50"
                        app:layout_constraintEnd_toEndOf="@id/et_signup_email"
                        app:layout_constraintTop_toTopOf="@id/et_signup_email" />

                    <TextView
                        android:id="@+id/tv_signup_email_message"
                        style="@style/Caption2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/signup_email_invalid_message"
                        android:textColor="@color/Pink_500"
                        android:visibility="invisible"
                        app:layout_constraintEnd_toEndOf="@id/et_signup_email"
                        app:layout_constraintTop_toBottomOf="@id/et_signup_email" />

                    <TextView
                        android:id="@+id/tv_signup_email_duplication_success"
                        style="@style/Caption2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/signup_email_valid_message"
                        android:textColor="@color/Green_300"
                        android:visibility="invisible"
                        app:layout_constraintEnd_toEndOf="@id/et_signup_email"
                        app:layout_constraintTop_toBottomOf="@id/et_signup_email" />

                    <TextView
                        android:id="@+id/tv_signup_email_duplication"
                        style="@style/Caption2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/signup_email_duplication"
                        android:textColor="@color/Pink_500"
                        android:visibility="invisible"
                        app:layout_constraintEnd_toEndOf="@id/et_signup_email"
                        app:layout_constraintTop_toBottomOf="@id/et_signup_email" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_signup_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    app:layout_constraintTop_toBottomOf="@id/cl_signup_email"
                    tools:ignore="Orientation">

                    <TextView
                        android:id="@+id/tv_signup_nickname"
                        style="@style/Body_M1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="35dp"
                        android:text="@string/signup_nickname_title"
                        android:textColor="@color/Gray_600"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/et_signup_nickname"
                        style="@style/Body_M1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="25dp"
                        android:layout_marginTop="9dp"
                        android:background="@drawable/bg_edittext_input"
                        android:hint="@string/signup_nickname_hint"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingVertical="14dp"
                        android:paddingStart="19dp"
                        android:textColor="@color/Gray_400"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_signup_nickname" />

                    <TextView
                        android:id="@+id/tv_signup_nickname_message"
                        style="@style/Caption2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/signup_nickname_hint"
                        android:textColor="@color/Pink_500"
                        android:visibility="invisible"
                        app:layout_constraintEnd_toEndOf="@id/et_signup_nickname"
                        app:layout_constraintTop_toBottomOf="@id/et_signup_nickname" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    app:layout_constraintTop_toBottomOf="@id/cl_signup_nickname"
                    tools:ignore="Orientation">

                    <TextView
                        android:id="@+id/tv_signup_password"
                        style="@style/Body_M1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="35dp"
                        android:text="@string/signup_password_title"
                        android:textColor="@color/Gray_600"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/et_signup_password"
                        style="@style/Body_M1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="25dp"
                        android:layout_marginTop="9dp"
                        android:background="@drawable/bg_edittext_input"
                        android:hint="@string/signup_password_hint"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingVertical="14dp"
                        android:paddingStart="19dp"
                        android:textColor="@color/Gray_400"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_signup_password" />

                    <TextView
                        android:id="@+id/tv_signup_password_message"
                        style="@style/Caption2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/signup_password_hint"
                        android:textColor="@color/Pink_500"
                        android:visibility="invisible"
                        app:layout_constraintEnd_toEndOf="@id/et_signup_password"
                        app:layout_constraintTop_toBottomOf="@id/et_signup_password" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_signup_password_check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    app:layout_constraintTop_toBottomOf="@id/cl_signup_password"
                    tools:ignore="Orientation">

                    <TextView
                        android:id="@+id/tv_signup_password_check"
                        style="@style/Body_M1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="35dp"
                        android:text="@string/signup_password_check_title"
                        android:textColor="@color/Gray_600"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText

                        android:id="@+id/et_signup_password_check"
                        style="@style/Body_M1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="25dp"
                        android:layout_marginTop="9dp"
                        android:background="@drawable/bg_edittext_input"
                        android:hint="@string/signup_password_check_hint"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingVertical="14dp"
                        android:paddingStart="19dp"
                        android:textColor="@color/Gray_400"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_signup_password_check" />

                    <TextView
                        android:id="@+id/tv_signup_password_check_message"
                        style="@style/Caption2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/signup_password_check_message"
                        android:textColor="@color/Pink_500"
                        android:visibility="invisible"
                        app:layout_constraintEnd_toEndOf="@id/et_signup_password_check"
                        app:layout_constraintTop_toBottomOf="@id/et_signup_password_check" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup"
            style="@style/Body_M1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/bg_btn"
            android:enabled="false"
            android:text="@string/signup_btn"
            android:textColor="@color/Gray_50"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>